style block is ready

--- a/src/app/dashboard/components/GenericInputContainer/GenericInputContainer.module.scss
+++ b/src/app/dashboard/components/GenericInputContainer/GenericInputContainer.module.scss
@@ -48,12 +48,12 @@
 
 .addBtn,
 .btnEditingBlock {
-	background: #979797;
+	background: #b9b9b9;
 	color: #292a2e;
-
-	border-radius: 6px;
 	font-size: 12px;
 	font-weight: bold;
+
+	border-radius: 6px;
 	width: 132px;
 	text-align: center;
 	padding: 9px;
