--- a/src/app/dashboard/components/Accordion/Accordion.module.scss
+++ b/src/app/dashboard/components/Accordion/Accordion.module.scss
@@ -11,19 +11,27 @@
 .accordionContent {
 	background: $white;
 	border-radius: 14px;
+	// padding: 0 32px;
 }
 
 .gridHeader {
 	text-transform: uppercase;
-	background: #f1f1f1;
+	// background: #f1f1f1;
 	border-top-left-radius: 14px;
 	border-top-right-radius: 14px;
 	border-bottom-right-radius: 0;
 	border-bottom-left-radius: 0;
+
+	border: 0px solid #d5d5d5;
+	border-bottom-width: 1px;
+
+	padding: 0 32px;
 }
 
 .gridHeaderItem {
-	font-weight: bold;
+	padding: 15px 0;
+	font-weight: 800;
+	font-size: $text-mob-normal;
 }
 
 .gridHeaderItemHidden {
@@ -42,15 +50,20 @@
 .gridRow {
 	display: grid;
 	grid-gap: 10px;
-	margin-bottom: 10px;
 
 	align-items: center;
 }
 
-// button {
-// 	padding: 5px 10px;
-// 	cursor: pointer;
-// }
+.gridRow {
+	border-bottom: 1px solid #d5d5d5;
+	padding: 0 32px;
+}
+
+.gridRowContainer {
+	&:last-child .gridRow {
+		border: none;
+	}
+}
 
 .rowContent {
 	display: contents;
@@ -59,15 +72,39 @@
 .gridRowItem {
 	padding: 5px 0;
 	margin: 5px;
+	font-weight: 600;
+	font-size: $text-mob-normal;
+}
+
+.gridRowItem:nth-last-child(2) {
+	justify-self: end;
+}
+.gridRowItem:last-child {
+	justify-self: center;
+}
+.editBtn {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	width: 129px;
+	height: 34px;
+
+	background-color: #4880ff;
+	color: #ffffff;
+
+	font-size: $text-small;
+	font-weight: 700;
+	border-radius: 6px;
 }
 
 .editContainer {
 	grid-column: 1 / -1;
-	margin-top: 10px;
 
-	padding: 10px;
-	border: 1px solid #ccc;
-	background-color: #f9f9f9;
+	padding-top: 28px;
+	padding-left: 32px;
+
+	border-bottom: 1px solid #ccc;
 }
 
 .editContent {
