Update Route Groups

--- a/src/app/(dashboard)/dashboard/components/Header/Header.module.scss
+++ b/src/app/(dashboard)/dashboard/components/Header/Header.module.scss
@@ -4,6 +4,28 @@
     padding: 13px 70px;
     background-color: $white;
     border-bottom: 2px solid #E0E0E0;
+
+    @media only screen and (max-width: $media-lg) {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 13px 30px;
+    }
+}
+
+.burger {
+    display: none;
+    transition: $transition;
+
+    @media only screen and (max-width: $media-lg) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &:hover {
+        color: $prim-color-blue;
+    }
 }
 
 .userInfo {
