--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -43,6 +43,15 @@ $lh-very-small: 1.166;
 
 $transition: all .25s ease-in-out;
 
+// Media
+$media-xs: 425px;
+$media-sm: 576px;
+$media-md: 768px;
+$media-lg-md: 992px;
+$media-lg: 1024px;
+$media-xl: 1200px;
+$media-xxl: 1400px;
+
 // LINE HEIGHT
 // gigantic
 // 37\20 = 1.85
