--- a/src/app/dashboard/components/sidebar/ui/sidebar-menu-item/styles.module.scss
+++ b/src/app/dashboard/components/sidebar/ui/sidebar-menu-item/styles.module.scss
@@ -4,7 +4,9 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    padding: 16px 36px;
+    width: fit-content;
+    margin: 0 36px;
+    padding: 16px 0;
     font-weight: 600;
 
 
