--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,6 +20,15 @@ body {
 	line-height: 1.625rem;
 	color: $prim-color-black;
 	background-color: $primary-bg-color;
+
+	&.disable-scroll {
+		overflow: hidden;
+		// height: 100vh;
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100%;
+	}
 }
 
 h1 {
