--- a/src/app/dashboard/components/accordion/styles.module.scss
+++ b/src/app/dashboard/components/accordion/styles.module.scss
@@ -4,6 +4,8 @@
     margin: 50px 0 100px 0;
     border: 1px solid #E0E0E0;
     border-radius: 14px;
+    overflow-x: auto;
+    white-space: nowrap;
 
     table {
         width: 100%;
