--- a/src/app/dashboard/page.module.scss
+++ b/src/app/dashboard/page.module.scss
@@ -22,3 +22,19 @@
         padding-top: 110px;
     }
 }
+
+.test {
+    margin-top: 50px;
+
+    button {
+        padding: 10px;
+        border: 2px solid #000;
+        background: aqua;
+        transition: all .25s ease-in-out;
+
+        &:hover {
+            background: #1befef;
+            box-shadow: 0 0 #0000, 0 0 #0000, 2px 2px 0px rgba(0, 0, 0, 1);
+        }
+    }
+}
