--- a/src/app/dashboard/page.module.scss
+++ b/src/app/dashboard/page.module.scss
@@ -26,6 +26,9 @@
 .test {
     margin-top: 50px;
 
+    display: flex;
+    gap: 20px;
+
     button {
         padding: 10px;
         border: 2px solid #000;
