--- a/src/app/(auth)/layout.module.scss
+++ b/src/app/(auth)/layout.module.scss
@@ -1,7 +1,7 @@
 @import "src/styles/variables.scss";
 
 .layout {
-    height: 100vh;
+    //height: 100vh;
     margin: 0;
     padding: 0;
     background: $prim-color-blue;
