--- a/src/app/(frontend)/event/[id]/page.module.scss
+++ b/src/app/(frontend)/event/[id]/page.module.scss
@@ -40,6 +40,7 @@
 
     @media only screen and (max-width: 1280px) {
         flex-direction: row;
+        align-items: center;
         max-width: 100%;
     }
 
