--- a/src/app/dashboard/components/header/styles.module.scss
+++ b/src/app/dashboard/components/header/styles.module.scss
@@ -28,9 +28,16 @@
 
 .imageWrapper {
     width: 50px;
+    height: 50px;
     border-radius: 100px;
     overflow: hidden;
     border: 1px solid $placeholder-color;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 .name {
